# redis-challenge-template

./: README.md  docker-compose.yml
.github/workflows/: docker-image.yml
alatuji/: Dockerfile  pyproject.toml  uji.py
workspace/: Dockerfile  main.py  pyproject.toml
